sumo/tests/netgen/errors/grid_errors/grid_x_number__zero/errors.netgen
Error: The number of edges must be larger than 1 in both directions.
Quitting (on error).
